at least the "correct"colours are visible

--- a/ics-frontend/src/styles.scss
+++ b/ics-frontend/src/styles.scss
@@ -11,7 +11,7 @@ $dark-theme: mat.define-dark-theme((
  ),
   // Only include `typography` and `density` in the default dark theme.
   typography: mat.define-typography-config(),
-  density: 50,
+  density: 0
 ));
 
 // Define a light theme
@@ -25,6 +25,7 @@ $light-theme: mat.define-light-theme((
 // Apply the dark theme by default
 @include mat.core-theme($dark-theme);
 @include mat.button-theme($dark-theme);
+@include mat.all-component-themes($dark-theme);
 
 // Apply the light theme only when the user prefers light themes.
 @media (prefers-color-scheme: light) {
@@ -32,4 +33,5 @@ $light-theme: mat.define-light-theme((
  // typography and density styles.
  @include mat.core-color($light-theme);
  @include mat.button-color($light-theme);
+ @include mat.all-component-themes($light-theme);
 }
